<resources>
    <string name="app_name">Mad Final Project</string>
    <string name="landImage">LandImage</string>
    <string name="landPageTopic">Plan Your Trips</string>
    <string name="landinPagePara1">Find Thousands of hotels and </string>
    <string name="landinPagePara2">reserve hotel packages. Reserve</string>
    <string name="landinPagePara3">cars for your trip. Find attractive</string>
    <string name="landingPagePara4">places nearby your desired hotel.</string>
    <string name="landinPagePara5">Enjoy.</string>
    <string name="landingPageButton">Get Started</string>
    <string name="signInPageImage">signInPageImage</string>
    <string name="signInPageTopic">Sign In To Continue</string>
    <string name="signInPageInput1">Email</string>
    <string name="signInPageInput2">Password</string>
    <string name="signInButton">Sign In</string>
    <string name="signInPageText">"Don\'t have an account? "</string>
    <string name="signInPageCreateAcc">Create</string>
    <string name="signUpPageImage">signUpPageImage</string>
    <string name="signUppageTopic">Create An Account</string>
    <string name="signUpPageButton1">Traveler</string>
    <string name="signUpPageButton2">Hotel Owner</string>
    <string name="signUpPageButton3">Tour Guide</string>
    <string name="signUpPageText">"Already Have an account? "</string>
    <string name="signUpPageSignIn">Sign In</string>
    <string name="travelerRegsitrarionImage">travelerRegsitrarionImage</string>
    <string name="travelerRegistrationTopic1">Welcome Aboard</string>
    <string name="travelerRegistrationTopic2">Traveler</string>
    <string name="travelerRegistrationF1">Enter Your First Name</string>
    <string name="travelerRegistrationF2">Enter Your Last Name</string>
    <string name="travelerRegistrationF3">Enter Your Email Account</string>
    <string name="travelerRegistrationF4">Enter Your Contact Number</string>
    <string name="travelerRegistrationF5">Enter Your Birthday</string>
    <string name="travelrRegistrationF6">Enter Your Password</string>
    <string name="travelrRegistrationF7">Re-Enter Your Password</string>
    <string name="travelerRegistrationF8">Sign Up</string>
    <string name="backWardNavigationImage">backWardNavigationImage</string>
    <string name="hotelOwnerSignUpImage">hotelOwnerSignUpImage</string>
    <string name="hotleOwnerSignUpTopic1">Welcome Aboard</string>
    <string name="hotelOnwerSignUpTopic2">Hotel Owner</string>
    <string name="tourGuideSignUpPageTopic1">Welcome Aboard</string>
    <string name="tourGuideSignUpPageTopic2">Tour Guide</string>
    <string name="MenuHOAddHotel">Add Hotel</string>
    <string name="MenuHOYourHotels">Your Hotels</string>
    <string name="MenuHOTouristAttraction">Tourist Attractions</string>
    <string name="MenuHOBookings">Bookings</string>
    <string name="MenuHOGetHelp">Get Help</string>
    <string name="MenuHOYourProfile">Your profile</string>
    <string name="MenuHOSignOut">Sign Out</string>
    <string name="menuHeaderGreating">Hello,</string>
    <string name="menuUsersName">Eanda Lakshan</string>
    <string name="MenuTGYourProfile">Your Profile</string>
    <string name="MenuTGAddAttractions">Add Attraction places</string>
    <string name="MenuTGYourAttractions">Your Attraction</string>
    <string name="MenuTGAllAttractions">All Attractions</string>
    <string name="MenuTGGetHelp">Get Help</string>
    <string name="MenuTGSignOut">Sign Out</string>
    <string name="MenuTRYourProfile">Your profile</string>
    <string name="MenuTRTouristAttraction">Tourist Attractions</string>
    <string name="MenuTRHotels">Your Bookings</string>
    <string name="MenuTRfavourite">Favourite</string>
    <string name="MenuTRSignOut">Sign Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="homeActionBarContent">Your Hotels</string>
    <string name="actionBarTitle">MAD UI</string>
    <string name="topic">Room Packages</string>
    <string name="topicNew">Packages</string>
    <string name="image1">TODO</string>
    <string name="box1">Garden Dwelling</string>
    <string name="box1type">"2 Guests/Room "</string>
    <string name="box1roomtype">"2 Guests/Room "</string>
    <string name="box1guest">2 Guests/Room</string>
    <string name="box1price">LKR137,194/Day</string>
    <string name="visit">Visit</string>
    <string name="box2type">Marsh Dwelling</string>
    <string name="box2guest">3 Guests/Room</string>
    <string name="box2price">LKR142,629/Day</string>
    <string name="box3type">Paddy Dwelling</string>
    <string name="box3guest">2 Guests/Room</string>
    <string name="box3price">LKR151,690/Day</string>
    <string name="rating">TODO</string>
    <string name="string_rating">rating</string>
    <string name="typeReview">Write Your Review</string>
    <string name="post">Post</string>
    <string name="review">Review</string>
    <string name="editReview">Edit Review</string>
    <string name="Edit">Edit</string>
    <string name="editR">Edit Your Review</string>
    <string name="edit2" />
    <string name="addTouristAttraction">Add A Tourist Attraction</string>
    <string name="box1name">Name</string>
    <string name="box2">Address</string>
    <string name="box3">City</string>
    <string name="box4">Description</string>
    <string name="location">Select Location</string>
    <string name="locationImage">TODO</string>
    <string name="uploadImages">Upload Images</string>
    <string name="addHotel">Add Hotel</string>
    <string name="attractionDetails">Attraction Details</string>
    <string name="text2address">Address</string>
    <string name="text3City">City</string>
    <string name="text3Description">Description</string>
    <string name="editButton">Edit</string>
    <string name="deleteButton">Delete</string>
    <string name="addAttractions">Add Attractions</string>
    <string name="yourTouristAttractions">Your Tourist Attractions</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="hotelUserViewPageButton3">Write a Review</string>
    <string name="hoteluserViewDTopics1">Ratings</string>
    <string name="hotelBookPageF1">"Check in Date "</string>
    <string name="hotelBookPageF2">Check Out Date</string>
    <string name="hotelBookPageNUM">Number of Rooms</string>
    <string name="hotelBookPageF3">Extra Details(If Required)</string>
    <string name="hoteBookPagePRButton">Proceed</string>
    <string name="hoteluserViewDTopics7">User Reviews</string>
    <string name="hoteluserViewDTopics8">You</string>
    <string name="hoteluserViewDData7_1">The surrounding is really close to the nature. The </string>
    <string name="hoteluserViewDData7_2">architecture of hotel too is beautiful. We chose a </string>
    <string name="hoteluserViewDData7_3">forest villa which is spacious enough. You can </string>
    <string name="hoteluserViewDData7_4">walk around the huge area where the hotel spans.</string>
    <string name="travelerAllBookingsHotelName">Jetwing Vil Uyana</string>
    <string name="travelerAllBookingsRoomType">Garden Dwelling</string>
    <string name="travelerAllBookingsDate">25/9/2021 To 27/9/2021</string>
    <string name="numberOfRooms">3 Rooms</string>
    <string name="bookingUserViewEditButton">Edit</string>
    <string name="bookingUserViewDeleteButton">Cancel</string>
    <string name="hotelOwnerAllBookingsCheckIn">25/9/2021</string>
    <string name="hotelOwnerAllBookingsCheckOut">27/9/2021</string>
    <string name="hotelOwnerAllBookingsRooms">3 Room(s)</string>
    <string name="hotelOwnerAllTravelerName">Eranda</string>
    <string name="hotelOwnerAllBookingsContactText">Contact</string>
    <string name="hotelOwnerAllBookingsEmail">Email</string>
    <string name="hotel_activity_topic">Add Hotel</string>
    <string name="dummy_title">Title</string>
    <string name="hotel_name">Name</string>
    <string name="hotel_address">Address</string>
    <string name="hotel_contact">Contact Number</string>
    <string name="amenities_title">Choose Amenities</string>
    <string name="pet_friendly">Pet Friendly</string>
    <string name="free_parking">Free Parking</string>
    <string name="Bar">Bar</string>
    <string name="wifi">Wi-Fi</string>
    <string name="yoga">Yoga</string>
    <string name="gym">Gym</string>
    <string name="spa">Spa</string>
    <string name="salon">Salon</string>
    <string name="Restaurant">Restaurant</string>
    <string name="pool">Pool</string>
    <string name="coffee_shop">Coffee Shop</string>
    <string name="atm">ATM</string>
    <string name="snack_bar">Snack Bar</string>
    <string name="hotel_description">Description</string>
    <string name="hotel_city">City</string>
    <string name="hotel_image_select">Select Images</string>
    <string name="hotel_img1_desc">hotel Image 1</string>
    <string name="hotel_img2_desc">hotel Image 2</string>
    <string name="hotel_img3_desc">hotel Image 3</string>
    <string name="hotel_img4_desc">hotel Image 4</string>
    <string name="hotel_img5_desc">hotel Image 5</string>
    <string name="hotelUploadProgress">Uploading Your Data.. Please Wait!</string>
    <string name="chooseImgCount">Choose Up To 5 Images</string>
    <string name="traveler_hotel_title">Explore Hotels</string>
    <string name="maxImages">Select up to 5 images</string>
    <string name="hotel_detail_title">Hotel Details</string>
    <string name="visit_btn">Visit</string>
    <string name="reservation_btn">Make a Reservation</string>
    <string name="dis_hotel_rating">Rating</string>
    <string name="dis_hotel_amenities">Amenities</string>
    <string name="dis_hotel_Address">Address</string>
    <string name="dis_hotel_Contact">Contact</string>
    <string name="dis_hotel_City">City</string>
    <string name="dis_hotel_desc">Description</string>
    <string name="review_btn">Write a Review</string>
    <string name="user_review_title">User Reviews</string>
    <string name="hotel_pkg_manage_title">Room Packages</string>
    <string name="hotel_edit_title">Edit Details</string>
    <string name="hotel_delete_title">Delete Hotel</string>
    <string name="edit_hotel">Edit Hotel</string>
    <string name="fav_btn">Add To Favourites</string>
    <string name="fav_title">Your Favourites</string>
    <string name="searchHotels">Search Hotels</string>
    <string name="number">Number of Guest</string>
    <string name="price">Price per Day</string>
    <string name="choose_room_features">Choose Room Features</string>
    <string name="air">Air Conditioned</string>
    <string name="housekeeping">Housekeeping</string>
    <string name="tel">Telephone</string>
    <string name="sofa">Sofa</string>
    <string name="desk">Desk</string>
    <string name="safe">Safe</string>
    <string name="minibar">Minibar</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="private_bathrooms">Private Bathrooms</string>
    <string name="bottled_water">Bottled Water</string>
    <string name="television">Television</string>
    <string name="choose_room_types">Choose Room Types</string>
    <string name="city_view">City View</string>
    <string name="landmark_view">Landmark View</string>
    <string name="family_rooms">Family Rooms</string>
    <string name="non_smoking_rooms">Non-Smoking Rooms</string>
    <string name="smoking_rooms">Smoking Rooms</string>
    <string name="nu_of_rooms">Number of Rooms</string>
    <string name="refundable">Refundable</string>
    <string name="add_package">Add Package</string>
    <string name="package_name1">Package Name</string>
    <string name="edit_package">Edit Package</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
</resources>