<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EditPackage">
        <include
            android:id="@+id/include"
            layout="@layout/action_bar" />



        <EditText
            android:id="@+id/Name"
            android:hint="@string/name"
            android:layout_marginTop="80dp"
            android:importantForAutofill="no"
            android:layout_width="375dp"
            android:layout_height="72dp"
            android:background="@drawable/rounded_text"
            android:gravity="center"
            android:fontFamily="@font/font4"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/numberOfGuest"
            android:layout_width="375dp"
            android:layout_height="72dp"
            android:importantForAutofill="no"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_text"
            android:fontFamily="@font/font4"
            android:gravity="center"
            android:hint="@string/number"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Name"
            android:inputType="number" />

        <EditText
            android:id="@+id/feePerDay"
            android:layout_marginTop="10dp"
            android:hint="@string/price"
            android:importantForAutofill="no"
            android:layout_width="375dp"
            android:layout_height="72dp"
            android:background="@drawable/rounded_text"
            android:gravity="center"
            android:fontFamily="@font/font4"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberOfGuest"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="411dp"
            android:layout_height="38dp"
            android:gravity="center"
            android:fontFamily="@font/poppins_semi_bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="1dp"
            android:text="@string/choose_room_features"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feePerDay" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAirCondition"
                style="@style/custom_chip_style"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/air"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipHouseKeeping"
                style="@style/custom_chip_style"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/housekeeping"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTel"
                style="@style/custom_chip_style"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/tel"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSofa"
                style="@style/custom_chip_style"
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sofa"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDesk"
                style="@style/custom_chip_style"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/desk"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSafe"
                style="@style/custom_chip_style"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/safe"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMiniBar"
                style="@style/custom_chip_style"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/minibar"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipRefrigerator"
                style="@style/custom_chip_style"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/refrigerator"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipBathRooms"
                style="@style/custom_chip_style"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/private_bathrooms"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipBottledWater"
                style="@style/custom_chip_style"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/bottled_water"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTV"
                style="@style/custom_chip_style"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/television"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="411dp"
            android:layout_height="38dp"
            android:gravity="center"
            android:fontFamily="@font/poppins_semi_bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="1dp"
            android:text="@string/choose_room_types"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCityView"
                style="@style/custom_chip_style"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/city_view"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLandMark"
                style="@style/custom_chip_style"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/landmark_view"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFamilyRooms"
                style="@style/custom_chip_style"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/family_rooms"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipNonSmokingRooms"
                style="@style/custom_chip_style"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/non_smoking_rooms"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSmokingRooms"
                style="@style/custom_chip_style"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/smoking_rooms"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </com.google.android.material.chip.ChipGroup>

        <EditText
            android:id="@+id/packageDescription"
            android:layout_width="375dp"
            android:layout_height="371dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/rounded1_text"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textMultiLine"
            android:fontFamily="@font/font4"
            android:hint="@string/description"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="@+id/numRooms"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup2" />

        <EditText
            android:id="@+id/numRooms"
            android:layout_width="375dp"
            android:layout_height="72dp"
            android:importantForAutofill="no"
            android:background="@drawable/rounded_text"
            android:fontFamily="@font/font4"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/nu_of_rooms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="1015dp"
            app:layout_constraintTop_toBottomOf="@+id/packageDescription"
            android:inputType="number"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="120dp"
            android:layout_height="31dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/font4"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/refundable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numRooms" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numRooms"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/packageSubmitBtn"
            android:layout_width="375dp"
            android:layout_height="72dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_green_button"
            android:fontFamily="@font/font4"
            android:gravity="center"
            android:text="@string/edit_package"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/theme_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


